[gd_scene load_steps=15 format=2]

[ext_resource path="res://core/battlesystem/units/Unit.gd" type="Script" id=1]
[ext_resource path="res://core/battlesystem/ControlCam.gd" type="Script" id=2]
[ext_resource path="res://core/battlesystem/units/AI.gd" type="Script" id=3]
[ext_resource path="res://addons/btree/script/btree.gd" type="Script" id=4]
[ext_resource path="res://assets/Images/Prototype/man-se.png" type="Texture" id=5]
[ext_resource path="res://resources/characters/player.tres" type="Resource" id=6]
[ext_resource path="res://assets/Images/BattleIcons/uncertainty.png" type="Texture" id=7]
[ext_resource path="res://core/battlesystem/units/RadialMenuButton.gd" type="Script" id=8]
[ext_resource path="res://assets/Images/BattleIcons/check-mark.png" type="Texture" id=10]
[ext_resource path="res://assets/Images/BattleIcons/padlock.png" type="Texture" id=14]
[ext_resource path="res://core/battlesystem/units/ActionMenuOption.gd" type="Script" id=15]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PathFollow2D/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("PathFollow2D/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "selected"
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PathFollow2D/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1.5, 1.5, 1.5, 1 ) ]
}

[node name="Unit" type="Path2D"]
z_index = 1
curve = null
script = ExtResource( 1 )
character_data = ExtResource( 6 )
character_name = "Steebo"
skin = ExtResource( 5 )
skin_offset = Vector2( 0, -16 )
stats = {
"action_points": 2,
"equipped_convictions": [  ],
"known_convictions": [  ],
"max_health": 100,
"max_move_speed": 100,
"move_range": 4
}

[node name="PathFollow2D" type="PathFollow2D" parent="."]
offset = 6047.27
rotate = false
loop = false

[node name="Sprite" type="Sprite" parent="PathFollow2D"]
position = Vector2( 0, -16 )
scale = Vector2( 0.125, 0.125 )
z_as_relative = false
texture = ExtResource( 5 )

[node name="Shadow" type="Sprite" parent="PathFollow2D"]
modulate = Color( 0.25098, 0.247059, 0.247059, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/selected = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2( 0.25, 0.25 )
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="Camera2D"]

[node name="AI" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="BTREE" type="Node" parent="AI"]
script = ExtResource( 4 )
tree = {
"connection": [ {
"from": "root",
"from_port": 0,
"to": "sequence",
"to_port": 0
}, {
"from": "sequence",
"from_port": 0,
"to": "task",
"to_port": 0
}, {
"from": "sequence",
"from_port": 1,
"to": "sequence2",
"to_port": 0
}, {
"from": "sequence2",
"from_port": 2,
"to": "wait_node",
"to_port": 0
}, {
"from": "sequence2",
"from_port": 8,
"to": "task9",
"to_port": 0
}, {
"from": "sequence2",
"from_port": 7,
"to": "sequence3",
"to_port": 0
}, {
"from": "sequence3",
"from_port": 0,
"to": "wait_node2",
"to_port": 0
}, {
"from": "sequence3",
"from_port": 1,
"to": "task4",
"to_port": 0
}, {
"from": "sequence3",
"from_port": 2,
"to": "task7",
"to_port": 0
}, {
"from": "sequence2",
"from_port": 1,
"to": "task8",
"to_port": 0
}, {
"from": "sequence2",
"from_port": 0,
"to": "task5",
"to_port": 0
}, {
"from": "sequence2",
"from_port": 3,
"to": "sequence4",
"to_port": 0
}, {
"from": "sequence4",
"from_port": 0,
"to": "task2",
"to_port": 0
}, {
"from": "sequence4",
"from_port": 1,
"to": "task10",
"to_port": 0
}, {
"from": "sequence4",
"from_port": 2,
"to": "task6",
"to_port": 0
}, {
"from": "sequence4",
"from_port": 4,
"to": "task3",
"to_port": 0
}, {
"from": "sequence4",
"from_port": 3,
"to": "wait_node4",
"to_port": 0
} ],
"nodes": [ {
"child": [ {
"child": [ {
"child": [  ],
"data": {
"fn": "task_check_control",
"offset": Vector2( 360, -120 ),
"params": [  ],
"size": Vector2( 334, 85.0001 ),
"values": [  ]
},
"name": "task",
"type": 1
}, {
"child": [ {
"child": [  ],
"data": {
"fn": "task_set_status",
"offset": Vector2( 520, 20 ),
"params": [ [ "Thinking", 1 ] ],
"size": Vector2( 310, 109 ),
"values": [ "Thinking" ]
},
"name": "task5",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_show_status",
"offset": Vector2( 520, 140 ),
"params": [ [ 1, 0 ] ],
"size": Vector2( 325, 109 ),
"values": [ 1 ]
},
"name": "task8",
"type": 1
}, {
"child": [  ],
"data": {
"count": 300.0,
"offset": Vector2( 520, 260 ),
"size": Vector2( 196, 55.0001 )
},
"name": "wait_node",
"type": 10
}, {
"child": [ {
"child": [  ],
"data": {
"fn": "task_has_walkable_cells",
"offset": Vector2( 900, 200 ),
"params": [  ],
"size": Vector2( 368, 85.0001 ),
"values": [  ]
},
"name": "task2",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_find_target_cell",
"offset": Vector2( 900, 300 ),
"params": [  ],
"size": Vector2( 346, 85 ),
"values": [  ]
},
"name": "task10",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_set_status",
"offset": Vector2( 900, 380 ),
"params": [ [ "Walking", 1 ] ],
"size": Vector2( 310, 109 ),
"values": [ "Walking" ]
},
"name": "task6",
"type": 1
}, {
"child": [  ],
"data": {
"count": 200.0,
"offset": Vector2( 900, 500 ),
"size": Vector2( 196, 55 )
},
"name": "wait_node4",
"type": 10
}, {
"child": [  ],
"data": {
"fn": "task_move",
"offset": Vector2( 900, 580 ),
"params": [  ],
"size": Vector2( 334, 84.9998 ),
"values": [  ]
},
"name": "task3",
"type": 1
} ],
"data": {
"count": 5,
"offset": Vector2( 520, 340 ),
"size": Vector2( 146, 190 )
},
"name": "sequence4",
"type": 2
}, {
"child": [ {
"child": [  ],
"data": {
"count": 100.0,
"offset": Vector2( 860, 720 ),
"size": Vector2( 196, 55 )
},
"name": "wait_node2",
"type": 10
}, {
"child": [  ],
"data": {
"fn": "task_end_turn",
"offset": Vector2( 860, 800 ),
"params": [  ],
"size": Vector2( 334, 85 ),
"values": [  ]
},
"name": "task4",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_set_status",
"offset": Vector2( 860, 900 ),
"params": [ [ "Done", 1 ] ],
"size": Vector2( 310, 109 ),
"values": [ "Done" ]
},
"name": "task7",
"type": 1
} ],
"data": {
"count": 4,
"offset": Vector2( 520, 660 ),
"size": Vector2( 146, 163 )
},
"name": "sequence3",
"type": 2
}, {
"child": [  ],
"data": {
"fn": "task_show_status",
"offset": Vector2( 440, 1040 ),
"params": [ [ 0, 0 ] ],
"size": Vector2( 325, 109 ),
"values": [ 0 ]
},
"name": "task9",
"type": 1
} ],
"data": {
"count": 9,
"offset": Vector2( 200, 180 ),
"size": Vector2( 146, 298 )
},
"name": "sequence2",
"type": 2
} ],
"data": {
"count": 2,
"offset": Vector2( 120, 0 ),
"size": Vector2( 138, 109 )
},
"name": "sequence",
"type": 2
} ],
"data": {
"offset": Vector2( 0, 0 ),
"size": Vector2( 83, 60.0176 )
},
"name": "root",
"type": 0
}, {
"child": [ {
"child": [  ],
"data": {
"fn": "task_check_control",
"offset": Vector2( 360, -120 ),
"params": [  ],
"size": Vector2( 334, 85.0001 ),
"values": [  ]
},
"name": "task",
"type": 1
}, {
"child": [ {
"child": [  ],
"data": {
"fn": "task_set_status",
"offset": Vector2( 520, 20 ),
"params": [ [ "Thinking", 1 ] ],
"size": Vector2( 310, 109 ),
"values": [ "Thinking" ]
},
"name": "task5",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_show_status",
"offset": Vector2( 520, 140 ),
"params": [ [ 1, 0 ] ],
"size": Vector2( 325, 109 ),
"values": [ 1 ]
},
"name": "task8",
"type": 1
}, {
"child": [  ],
"data": {
"count": 300.0,
"offset": Vector2( 520, 260 ),
"size": Vector2( 196, 55.0001 )
},
"name": "wait_node",
"type": 10
}, {
"child": [ {
"child": [  ],
"data": {
"fn": "task_has_walkable_cells",
"offset": Vector2( 900, 200 ),
"params": [  ],
"size": Vector2( 368, 85.0001 ),
"values": [  ]
},
"name": "task2",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_find_target_cell",
"offset": Vector2( 900, 300 ),
"params": [  ],
"size": Vector2( 346, 85 ),
"values": [  ]
},
"name": "task10",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_set_status",
"offset": Vector2( 900, 380 ),
"params": [ [ "Walking", 1 ] ],
"size": Vector2( 310, 109 ),
"values": [ "Walking" ]
},
"name": "task6",
"type": 1
}, {
"child": [  ],
"data": {
"count": 200.0,
"offset": Vector2( 900, 500 ),
"size": Vector2( 196, 55 )
},
"name": "wait_node4",
"type": 10
}, {
"child": [  ],
"data": {
"fn": "task_move",
"offset": Vector2( 900, 580 ),
"params": [  ],
"size": Vector2( 334, 84.9998 ),
"values": [  ]
},
"name": "task3",
"type": 1
} ],
"data": {
"count": 5,
"offset": Vector2( 520, 340 ),
"size": Vector2( 146, 190 )
},
"name": "sequence4",
"type": 2
}, {
"child": [ {
"child": [  ],
"data": {
"count": 100.0,
"offset": Vector2( 860, 720 ),
"size": Vector2( 196, 55 )
},
"name": "wait_node2",
"type": 10
}, {
"child": [  ],
"data": {
"fn": "task_end_turn",
"offset": Vector2( 860, 800 ),
"params": [  ],
"size": Vector2( 334, 85 ),
"values": [  ]
},
"name": "task4",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_set_status",
"offset": Vector2( 860, 900 ),
"params": [ [ "Done", 1 ] ],
"size": Vector2( 310, 109 ),
"values": [ "Done" ]
},
"name": "task7",
"type": 1
} ],
"data": {
"count": 4,
"offset": Vector2( 520, 660 ),
"size": Vector2( 146, 163 )
},
"name": "sequence3",
"type": 2
}, {
"child": [  ],
"data": {
"fn": "task_show_status",
"offset": Vector2( 440, 1040 ),
"params": [ [ 0, 0 ] ],
"size": Vector2( 325, 109 ),
"values": [ 0 ]
},
"name": "task9",
"type": 1
} ],
"data": {
"count": 9,
"offset": Vector2( 200, 180 ),
"size": Vector2( 146, 298 )
},
"name": "sequence2",
"type": 2
} ],
"data": {
"count": 2,
"offset": Vector2( 120, 0 ),
"size": Vector2( 138, 109 )
},
"name": "sequence",
"type": 2
}, {
"child": [  ],
"data": {
"fn": "task_check_control",
"offset": Vector2( 360, -120 ),
"params": [  ],
"size": Vector2( 334, 85.0001 ),
"values": [  ]
},
"name": "task",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_set_status",
"offset": Vector2( 860, 900 ),
"params": [ [ "Done", 1 ] ],
"size": Vector2( 310, 109 ),
"values": [ "Done" ]
},
"name": "task7",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_end_turn",
"offset": Vector2( 860, 800 ),
"params": [  ],
"size": Vector2( 334, 85 ),
"values": [  ]
},
"name": "task4",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_show_status",
"offset": Vector2( 440, 1040 ),
"params": [ [ 0, 0 ] ],
"size": Vector2( 325, 109 ),
"values": [ 0 ]
},
"name": "task9",
"type": 1
}, {
"child": [  ],
"data": {
"count": 300.0,
"offset": Vector2( 520, 260 ),
"size": Vector2( 196, 55.0001 )
},
"name": "wait_node",
"type": 10
}, {
"child": [  ],
"data": {
"fn": "task_show_status",
"offset": Vector2( 520, 140 ),
"params": [ [ 1, 0 ] ],
"size": Vector2( 325, 109 ),
"values": [ 1 ]
},
"name": "task8",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_set_status",
"offset": Vector2( 520, 20 ),
"params": [ [ "Thinking", 1 ] ],
"size": Vector2( 310, 109 ),
"values": [ "Thinking" ]
},
"name": "task5",
"type": 1
}, {
"child": [ {
"child": [  ],
"data": {
"fn": "task_has_walkable_cells",
"offset": Vector2( 900, 200 ),
"params": [  ],
"size": Vector2( 368, 85.0001 ),
"values": [  ]
},
"name": "task2",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_find_target_cell",
"offset": Vector2( 900, 300 ),
"params": [  ],
"size": Vector2( 346, 85 ),
"values": [  ]
},
"name": "task10",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_set_status",
"offset": Vector2( 900, 380 ),
"params": [ [ "Walking", 1 ] ],
"size": Vector2( 310, 109 ),
"values": [ "Walking" ]
},
"name": "task6",
"type": 1
}, {
"child": [  ],
"data": {
"count": 200.0,
"offset": Vector2( 900, 500 ),
"size": Vector2( 196, 55 )
},
"name": "wait_node4",
"type": 10
}, {
"child": [  ],
"data": {
"fn": "task_move",
"offset": Vector2( 900, 580 ),
"params": [  ],
"size": Vector2( 334, 84.9998 ),
"values": [  ]
},
"name": "task3",
"type": 1
} ],
"data": {
"count": 5,
"offset": Vector2( 520, 340 ),
"size": Vector2( 146, 190 )
},
"name": "sequence4",
"type": 2
}, {
"child": [  ],
"data": {
"fn": "task_find_target_cell",
"offset": Vector2( 900, 300 ),
"params": [  ],
"size": Vector2( 346, 85 ),
"values": [  ]
},
"name": "task10",
"type": 1
}, {
"child": [ {
"child": [  ],
"data": {
"fn": "task_set_status",
"offset": Vector2( 520, 20 ),
"params": [ [ "Thinking", 1 ] ],
"size": Vector2( 310, 109 ),
"values": [ "Thinking" ]
},
"name": "task5",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_show_status",
"offset": Vector2( 520, 140 ),
"params": [ [ 1, 0 ] ],
"size": Vector2( 325, 109 ),
"values": [ 1 ]
},
"name": "task8",
"type": 1
}, {
"child": [  ],
"data": {
"count": 300.0,
"offset": Vector2( 520, 260 ),
"size": Vector2( 196, 55.0001 )
},
"name": "wait_node",
"type": 10
}, {
"child": [ {
"child": [  ],
"data": {
"fn": "task_has_walkable_cells",
"offset": Vector2( 900, 200 ),
"params": [  ],
"size": Vector2( 368, 85.0001 ),
"values": [  ]
},
"name": "task2",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_find_target_cell",
"offset": Vector2( 900, 300 ),
"params": [  ],
"size": Vector2( 346, 85 ),
"values": [  ]
},
"name": "task10",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_set_status",
"offset": Vector2( 900, 380 ),
"params": [ [ "Walking", 1 ] ],
"size": Vector2( 310, 109 ),
"values": [ "Walking" ]
},
"name": "task6",
"type": 1
}, {
"child": [  ],
"data": {
"count": 200.0,
"offset": Vector2( 900, 500 ),
"size": Vector2( 196, 55 )
},
"name": "wait_node4",
"type": 10
}, {
"child": [  ],
"data": {
"fn": "task_move",
"offset": Vector2( 900, 580 ),
"params": [  ],
"size": Vector2( 334, 84.9998 ),
"values": [  ]
},
"name": "task3",
"type": 1
} ],
"data": {
"count": 5,
"offset": Vector2( 520, 340 ),
"size": Vector2( 146, 190 )
},
"name": "sequence4",
"type": 2
}, {
"child": [ {
"child": [  ],
"data": {
"count": 100.0,
"offset": Vector2( 860, 720 ),
"size": Vector2( 196, 55 )
},
"name": "wait_node2",
"type": 10
}, {
"child": [  ],
"data": {
"fn": "task_end_turn",
"offset": Vector2( 860, 800 ),
"params": [  ],
"size": Vector2( 334, 85 ),
"values": [  ]
},
"name": "task4",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_set_status",
"offset": Vector2( 860, 900 ),
"params": [ [ "Done", 1 ] ],
"size": Vector2( 310, 109 ),
"values": [ "Done" ]
},
"name": "task7",
"type": 1
} ],
"data": {
"count": 4,
"offset": Vector2( 520, 660 ),
"size": Vector2( 146, 163 )
},
"name": "sequence3",
"type": 2
}, {
"child": [  ],
"data": {
"fn": "task_show_status",
"offset": Vector2( 440, 1040 ),
"params": [ [ 0, 0 ] ],
"size": Vector2( 325, 109 ),
"values": [ 0 ]
},
"name": "task9",
"type": 1
} ],
"data": {
"count": 9,
"offset": Vector2( 200, 180 ),
"size": Vector2( 146, 298 )
},
"name": "sequence2",
"type": 2
}, {
"child": [  ],
"data": {
"fn": "task_set_status",
"offset": Vector2( 900, 380 ),
"params": [ [ "Walking", 1 ] ],
"size": Vector2( 310, 109 ),
"values": [ "Walking" ]
},
"name": "task6",
"type": 1
}, {
"child": [  ],
"data": {
"count": 100.0,
"offset": Vector2( 860, 720 ),
"size": Vector2( 196, 55 )
},
"name": "wait_node2",
"type": 10
}, {
"child": [ {
"child": [  ],
"data": {
"count": 100.0,
"offset": Vector2( 860, 720 ),
"size": Vector2( 196, 55 )
},
"name": "wait_node2",
"type": 10
}, {
"child": [  ],
"data": {
"fn": "task_end_turn",
"offset": Vector2( 860, 800 ),
"params": [  ],
"size": Vector2( 334, 85 ),
"values": [  ]
},
"name": "task4",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_set_status",
"offset": Vector2( 860, 900 ),
"params": [ [ "Done", 1 ] ],
"size": Vector2( 310, 109 ),
"values": [ "Done" ]
},
"name": "task7",
"type": 1
} ],
"data": {
"count": 4,
"offset": Vector2( 520, 660 ),
"size": Vector2( 146, 163 )
},
"name": "sequence3",
"type": 2
}, {
"child": [  ],
"data": {
"fn": "task_has_walkable_cells",
"offset": Vector2( 900, 200 ),
"params": [  ],
"size": Vector2( 368, 85.0001 ),
"values": [  ]
},
"name": "task2",
"type": 1
}, {
"child": [  ],
"data": {
"count": 200.0,
"offset": Vector2( 900, 500 ),
"size": Vector2( 196, 55 )
},
"name": "wait_node4",
"type": 10
}, {
"child": [  ],
"data": {
"fn": "task_move",
"offset": Vector2( 900, 580 ),
"params": [  ],
"size": Vector2( 334, 84.9998 ),
"values": [  ]
},
"name": "task3",
"type": 1
} ],
"root": {
"child": [ {
"child": [ {
"child": [  ],
"data": {
"fn": "task_check_control",
"offset": Vector2( 360, -120 ),
"params": [  ],
"size": Vector2( 334, 85.0001 ),
"values": [  ]
},
"name": "task",
"type": 1
}, {
"child": [ {
"child": [  ],
"data": {
"fn": "task_set_status",
"offset": Vector2( 520, 20 ),
"params": [ [ "Thinking", 1 ] ],
"size": Vector2( 310, 109 ),
"values": [ "Thinking" ]
},
"name": "task5",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_show_status",
"offset": Vector2( 520, 140 ),
"params": [ [ 1, 0 ] ],
"size": Vector2( 325, 109 ),
"values": [ 1 ]
},
"name": "task8",
"type": 1
}, {
"child": [  ],
"data": {
"count": 300.0,
"offset": Vector2( 520, 260 ),
"size": Vector2( 196, 55.0001 )
},
"name": "wait_node",
"type": 10
}, {
"child": [ {
"child": [  ],
"data": {
"fn": "task_has_walkable_cells",
"offset": Vector2( 900, 200 ),
"params": [  ],
"size": Vector2( 368, 85.0001 ),
"values": [  ]
},
"name": "task2",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_find_target_cell",
"offset": Vector2( 900, 300 ),
"params": [  ],
"size": Vector2( 346, 85 ),
"values": [  ]
},
"name": "task10",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_set_status",
"offset": Vector2( 900, 380 ),
"params": [ [ "Walking", 1 ] ],
"size": Vector2( 310, 109 ),
"values": [ "Walking" ]
},
"name": "task6",
"type": 1
}, {
"child": [  ],
"data": {
"count": 200.0,
"offset": Vector2( 900, 500 ),
"size": Vector2( 196, 55 )
},
"name": "wait_node4",
"type": 10
}, {
"child": [  ],
"data": {
"fn": "task_move",
"offset": Vector2( 900, 580 ),
"params": [  ],
"size": Vector2( 334, 84.9998 ),
"values": [  ]
},
"name": "task3",
"type": 1
} ],
"data": {
"count": 5,
"offset": Vector2( 520, 340 ),
"size": Vector2( 146, 190 )
},
"name": "sequence4",
"type": 2
}, {
"child": [ {
"child": [  ],
"data": {
"count": 100.0,
"offset": Vector2( 860, 720 ),
"size": Vector2( 196, 55 )
},
"name": "wait_node2",
"type": 10
}, {
"child": [  ],
"data": {
"fn": "task_end_turn",
"offset": Vector2( 860, 800 ),
"params": [  ],
"size": Vector2( 334, 85 ),
"values": [  ]
},
"name": "task4",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_set_status",
"offset": Vector2( 860, 900 ),
"params": [ [ "Done", 1 ] ],
"size": Vector2( 310, 109 ),
"values": [ "Done" ]
},
"name": "task7",
"type": 1
} ],
"data": {
"count": 4,
"offset": Vector2( 520, 660 ),
"size": Vector2( 146, 163 )
},
"name": "sequence3",
"type": 2
}, {
"child": [  ],
"data": {
"fn": "task_show_status",
"offset": Vector2( 440, 1040 ),
"params": [ [ 0, 0 ] ],
"size": Vector2( 325, 109 ),
"values": [ 0 ]
},
"name": "task9",
"type": 1
} ],
"data": {
"count": 9,
"offset": Vector2( 200, 180 ),
"size": Vector2( 146, 298 )
},
"name": "sequence2",
"type": 2
} ],
"data": {
"count": 2,
"offset": Vector2( 120, 0 ),
"size": Vector2( 138, 109 )
},
"name": "sequence",
"type": 2
} ],
"data": {
"offset": Vector2( 0, 0 ),
"size": Vector2( 83, 60.0176 )
},
"name": "root",
"type": 0
}
}
_tree_id = "13981725033728860880"

[node name="StatusLabel" type="Label" parent="AI"]
visible = false
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -27.0
margin_top = -43.0
margin_right = 26.0
margin_bottom = -29.0
text = "Thinking"

[node name="ActionsUI" type="Control" parent="."]
margin_left = -15.0
margin_top = -78.0
margin_right = 17.0
margin_bottom = -46.0
rect_min_size = Vector2( 32, 32 )
mouse_filter = 1

[node name="ActionMenu" type="TextureButton" parent="ActionsUI"]
visible = false
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture_normal = ExtResource( 7 )
expand = true
script = ExtResource( 8 )
radius = 50

[node name="Buttons" type="Control" parent="ActionsUI/ActionMenu"]

[node name="EndTurn" type="TextureButton" parent="ActionsUI/ActionMenu/Buttons"]
margin_right = 1.0
margin_bottom = 1.0
rect_min_size = Vector2( 32, 32 )
texture_normal = ExtResource( 10 )
texture_disabled = ExtResource( 14 )
expand = true
script = ExtResource( 15 )
option_display = "EndTurn"
option_action = "end_turn"
option_icon = ExtResource( 10 )

[node name="Tween" type="Tween" parent="ActionsUI/ActionMenu"]

[connection signal="action_pressed" from="ActionsUI/ActionMenu" to="." method="_on_ActionMenu_action_pressed"]
[connection signal="tween_all_completed" from="ActionsUI/ActionMenu/Tween" to="ActionsUI/ActionMenu" method="_on_Tween_tween_all_completed"]
